# Learning-OpenGL

./: .gitignore  CMakeLists.txt  main.c  main.cpp
include/: Camera.hpp  Shader.hpp
shaders/: fragmentShader.shader  vertexShader.shader
src/: Shader.cpp
